force-app/main/default/objects/Lead/fields/Alumni_Engagement_Bolt_Install_Request__c.field-meta.xml
<CustomField>
    <fullName>Alumni_Engagement_Bolt_Install_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alumni Engagement Bolt - Install</label>
    <type>Checkbox</type>
</CustomField>