force-app/main/default/objects/Lead/fields/AppX_Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>AppX_Lead_Type__c</fullName>
    <formula>IF(CONTAINS( TEXT(LeadSource) , &quot;IN&quot;) , &quot;Install&quot;, 
IF(CONTAINS( TEXT(LeadSource) , &quot;DM&quot;), &quot;Demo Video&quot;, 
IF(CONTAINS( TEXT(LeadSource) , &quot;LM&quot;), &quot;Learn More&quot;, &quot;Other&quot;) ) )</formula>
    <label>AppX Lead Type</label>
    <type>Text</type>
</CustomField>