force-app/main/default/objects/Lead/fields/Channel_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Channel_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the Lead was assigned because the Company/Account is owned by a SF RVP/AE that maps to a 7S AE/CP</description>
    <inlineHelpText>If checked, the Lead was assigned because the Company/Account is owned by a SF RVP/AE that maps to a 7S AE/CP</inlineHelpText>
    <label>Channel Assignment</label>
    <type>Checkbox</type>
</CustomField>