force-app/main/default/objects/Lead/fields/Channel_Rep_del__c.field-meta.xml
<CustomField>
    <fullName>Channel_Rep_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The representative who provided the referral</description>
    <inlineHelpText>Enter the name of the channel rep. If the name is not found, click on the &quot;New&quot; button inside the search box.</inlineHelpText>
    <label>Channel Rep</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads_del</relationshipName>
    <type>Lookup</type>
</CustomField>