force-app/main/default/objects/Lead/fields/Community_Migration_Accel_Demo_Couont__c.field-meta.xml
<CustomField>
    <fullName>Community_Migration_Accel_Demo_Couont__c</fullName>
    <label>Community Migration Accel - Demo Ct</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>