force-app/main/default/objects/Lead/fields/Community_Migration_Accel_Install__c.field-meta.xml
<CustomField>
    <fullName>Community_Migration_Accel_Install__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Community Migration Accel - Install</label>
    <type>Checkbox</type>
</CustomField>