force-app/main/default/objects/Lead/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <description>The role of the contact person.</description>
    <inlineHelpText>What role does the contact play in the process?</inlineHelpText>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Decision Maker</fullName>
                <color>#FFFFFF</color>
                <label>Decision Maker</label>
            </value>
            <value>
                <fullName>Influencer</fullName>
                <color>#FFFFFF</color>
                <label>Influencer</label>
            </value>
            <value>
                <fullName>SFDC</fullName>
                <color>#FFFFFF</color>
                <label>SFDC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>