force-app/main/default/objects/Lead/fields/Contact_Us_Demo__c.field-meta.xml
<CustomField>
    <fullName>Contact_Us_Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Us - Demo</label>
    <type>Checkbox</type>
</CustomField>