force-app/main/default/objects/Lead/fields/Converted__c.field-meta.xml
<CustomField>
    <fullName>Converted__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is this lead converted?</description>
    <label>Converted?</label>
    <type>Checkbox</type>
</CustomField>