force-app/main/default/objects/Lead/fields/CP_Owned__c.field-meta.xml
<CustomField>
    <fullName>CP_Owned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CP Owned</label>
    <type>Checkbox</type>
</CustomField>