force-app/main/default/objects/Lead/fields/Created_Date2__c.field-meta.xml
<CustomField>
    <fullName>Created_Date2__c</fullName>
    <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date2</label>
    <type>Date</type>
</CustomField>