force-app/main/default/objects/Lead/fields/Customer_Experience_Accelerator_Instal__c.field-meta.xml
<CustomField>
    <fullName>Customer_Experience_Accelerator_Instal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Exp Accelerator - Install</label>
    <type>Checkbox</type>
</CustomField>