force-app/main/default/objects/Lead/fields/Digital_Storefront_Bolt_Demo__c.field-meta.xml
<CustomField>
    <fullName>Digital_Storefront_Bolt_Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digital Storefront Bolt - Demo</label>
    <type>Checkbox</type>
</CustomField>