force-app/main/default/objects/Lead/fields/Digital_Storefront_Bolt_Install_Reques__c.field-meta.xml
<CustomField>
    <fullName>Digital_Storefront_Bolt_Install_Reques__c</fullName>
    <description>Inquiry Couont Sum (+1 when an inquiry occurs 90 days after last inquiry)</description>
    <inlineHelpText>Inquiry Couont Sum (+1 when an inquiry occurs 90 days after last inquiry)</inlineHelpText>
    <label>Digital Storefront Bolt - Install Ct</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>