force-app/main/default/objects/Lead/fields/Employee_Digital_Workspace_Bolt_Demo_C__c.field-meta.xml
<CustomField>
    <fullName>Employee_Digital_Workspace_Bolt_Demo_C__c</fullName>
    <description>Inquiry Couont Sum (+1 when an inquiry occurs 90 days after last inquiry)</description>
    <inlineHelpText>Inquiry Couont Sum (+1 when an inquiry occurs 90 days after last inquiry)</inlineHelpText>
    <label>Employee Workspace Bolt - Demo Ct</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>