force-app/main/default/objects/Lead/fields/Employee_Digital_Workspace_Bolt_Instal__c.field-meta.xml
<CustomField>
    <fullName>Employee_Digital_Workspace_Bolt_Instal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employee Workspace Bolt - Install</label>
    <type>Checkbox</type>
</CustomField>