force-app/main/default/objects/Lead/fields/Ideas_Demo__c.field-meta.xml
<CustomField>
    <fullName>Ideas_Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ideas - Demo</label>
    <type>Checkbox</type>
</CustomField>