force-app/main/default/objects/Lead/fields/Ideas_Demo_Count__c.field-meta.xml
<CustomField>
    <fullName>Ideas_Demo_Count__c</fullName>
    <label>Ideas - Demo Ct</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>