force-app/main/default/objects/Lead/fields/Ideas_Install_Request_Count__c.field-meta.xml
<CustomField>
    <fullName>Ideas_Install_Request_Count__c</fullName>
    <label>Ideas - Install Ct</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>