force-app/main/default/objects/Lead/fields/jsImpacts__Data_com_managed__c.field-meta.xml
<CustomField>
    <fullName>jsImpacts__Data_com_managed__c</fullName>
    <formula>IF( Jigsaw&lt;&gt;&quot;&quot;, 1, 0)</formula>
    <label>Data.com Managed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>