force-app/main/default/objects/Lead/fields/Lead_Category__c.field-meta.xml
<CustomField>
    <fullName>Lead_Category__c</fullName>
    <label>Lead Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <color>#FFFFFF</color>
                <label>A</label>
            </value>
            <value>
                <fullName>B</fullName>
                <color>#FFFFFF</color>
                <label>B</label>
            </value>
            <value>
                <fullName>C</fullName>
                <color>#FFFFFF</color>
                <label>C</label>
            </value>
            <value>
                <fullName>D</fullName>
                <color>#FFFFFF</color>
                <label>D</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>