force-app/main/default/objects/Lead/fields/Lead_Class__c.field-meta.xml
<CustomField>
    <fullName>Lead_Class__c</fullName>
    <label>Lead Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Event</fullName>
                <color>#FFFFFF</color>
                <label>Event</label>
            </value>
            <value>
                <fullName>Referral</fullName>
                <color>#FFFFFF</color>
                <label>Referral</label>
            </value>
            <value>
                <fullName>Inbound</fullName>
                <color>#FFFFFF</color>
                <label>Inbound</label>
            </value>
            <value>
                <fullName>Outbound</fullName>
                <color>#FFFFFF</color>
                <label>Outbound</label>
            </value>
            <value>
                <fullName>Search</fullName>
                <color>#FFFFFF</color>
                <label>Search</label>
            </value>
            <value>
                <fullName>Channel</fullName>
                <color>#FFFFFF</color>
                <label>Channel</label>
            </value>
            <value>
                <fullName>Sales</fullName>
                <color>#FFFFFF</color>
                <label>Sales</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>