force-app/main/default/objects/Lead/fields/Lead_Family__c.field-meta.xml
<CustomField>
    <fullName>Lead_Family__c</fullName>
    <label>Lead Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Content</fullName>
                <color>#FFFFFF</color>
                <label>Content</label>
            </value>
            <value>
                <fullName>Events: 7Summits</fullName>
                <color>#FFFFFF</color>
                <label>Events: 7Summits</label>
            </value>
            <value>
                <fullName>Events: Salesforce</fullName>
                <color>#FFFFFF</color>
                <label>Events: Salesforce</label>
            </value>
            <value>
                <fullName>Landing Pages</fullName>
                <color>#FFFFFF</color>
                <label>Landing Pages</label>
            </value>
            <value>
                <fullName>Lists purchased</fullName>
                <color>#FFFFFF</color>
                <label>Lists purchased</label>
            </value>
            <value>
                <fullName>Organic search</fullName>
                <color>#FFFFFF</color>
                <label>Organic search</label>
            </value>
            <value>
                <fullName>Paid Search</fullName>
                <color>#FFFFFF</color>
                <label>Paid Search</label>
            </value>
            <value>
                <fullName>Tradeshow</fullName>
                <color>#FFFFFF</color>
                <label>Tradeshow</label>
            </value>
            <value>
                <fullName>Referral</fullName>
                <color>#FFFFFF</color>
                <label>Referral</label>
            </value>
            <value>
                <fullName>Channel</fullName>
                <color>#FFFFFF</color>
                <label>Channel</label>
            </value>
            <value>
                <fullName>Accounts</fullName>
                <color>#FFFFFF</color>
                <label>Accounts</label>
            </value>
            <value>
                <fullName>Sales</fullName>
                <color>#FFFFFF</color>
                <label>Sales</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>