force-app/main/default/objects/Lead/fields/Lead_Score_Converted__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score_Converted__c</fullName>
    <label>Lead Score - Converted</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>