force-app/main/default/objects/Lead/fields/Lead_Source_Detail__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The campaign associated with the lead source.</description>
    <inlineHelpText>Add the campaign that the lead was sourced from.</inlineHelpText>
    <label>Lead Source Detail</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>