force-app/main/default/objects/Lead/fields/Leaderboard_Plus_Demo_Count__c.field-meta.xml
<CustomField>
    <fullName>Leaderboard_Plus_Demo_Count__c</fullName>
    <description>Inquiry Couont Sum (+1 when an inquiry occurs 90 days after last inquiry)</description>
    <inlineHelpText>Inquiry Couont Sum (+1 when an inquiry occurs 90 days after last inquiry)</inlineHelpText>
    <label>Leaderboard Plus - Demo Ct</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>