force-app/main/default/objects/Lead/fields/Left_Company__c.field-meta.xml
<CustomField>
    <fullName>Left_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the contact has left the company.</description>
    <inlineHelpText>Check this box if the contact has left the company.</inlineHelpText>
    <label>Left Company</label>
    <type>Checkbox</type>
</CustomField>