force-app/main/default/objects/Lead/fields/MQL_Counter_YTD__c.field-meta.xml
<CustomField>
    <fullName>MQL_Counter_YTD__c</fullName>
    <description>Sum of Marketing inquiries, occuring at least 90 days apart. ONLY counts YTD inquiries</description>
    <inlineHelpText>Sum of Marketing inquiries, occuring at least 90 days apart. ONLY counts YTD inquiries</inlineHelpText>
    <label>MQL Counter (YTD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>