force-app/main/default/objects/Lead/fields/MQL_Date__c.field-meta.xml
<CustomField>
    <fullName>MQL_Date__c</fullName>
    <description>Date of most recent marketing inquiry (not within 90 days)</description>
    <label>MQL Date</label>
    <type>Date</type>
</CustomField>