force-app/main/default/objects/Lead/fields/Page_Info_Install__c.field-meta.xml
<CustomField>
    <fullName>Page_Info_Install__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Page Info - Install</label>
    <type>Checkbox</type>
</CustomField>