force-app/main/default/objects/Lead/fields/PartnerFirst_Bolt_Demo__c.field-meta.xml
<CustomField>
    <fullName>PartnerFirst_Bolt_Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PartnerFirst Bolt - Demo</label>
    <type>Checkbox</type>
</CustomField>