force-app/main/default/objects/Lead/fields/PartnerFirst_for_Manufacturing_Bolt_De__c.field-meta.xml
<CustomField>
    <fullName>PartnerFirst_for_Manufacturing_Bolt_De__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PartnerFirst for Mfg Bolt - Demo</label>
    <type>Checkbox</type>
</CustomField>