force-app/main/default/objects/Lead/fields/PartnerFirst_Mfg_Bolt_Install_Reques__c.field-meta.xml
<CustomField>
    <fullName>PartnerFirst_Mfg_Bolt_Install_Reques__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PartnerFirst Mfg Bolt - Install</label>
    <type>Checkbox</type>
</CustomField>