force-app/main/default/objects/Lead/fields/Passed_to_Sales__c.field-meta.xml
<CustomField>
    <fullName>Passed_to_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Passed to Sales</label>
    <type>Checkbox</type>
</CustomField>