force-app/main/default/objects/Lead/fields/Profile_URL__c.field-meta.xml
<CustomField>
    <fullName>Profile_URL__c</fullName>
    <label>User Profile URL</label>
    <type>TextArea</type>
</CustomField>