force-app/main/default/objects/Lead/fields/Profile_Wizard_Flow_Demo__c.field-meta.xml
<CustomField>
    <fullName>Profile_Wizard_Flow_Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Profile Wizard Flow - Demo</label>
    <type>Checkbox</type>
</CustomField>