force-app/main/default/objects/Lead/fields/Questionnaire_Flow_Install__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Flow_Install__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Questionnaire Flow - Install</label>
    <type>Checkbox</type>
</CustomField>