force-app/main/default/objects/Lead/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <description>The record type associated with the contact.</description>
    <inlineHelpText>The record type associated with the contact.</inlineHelpText>
    <label>Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Record_Type</valueSetName>
    </valueSet>
</CustomField>