force-app/main/default/objects/Lead/fields/Slideshare_Flow_Install__c.field-meta.xml
<CustomField>
    <fullName>Slideshare_Flow_Install__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Slideshare Flow - Install</label>
    <type>Checkbox</type>
</CustomField>