force-app/main/default/objects/Lead/fields/Social_Share_Demo__c.field-meta.xml
<CustomField>
    <fullName>Social_Share_Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Social Share - Demo</label>
    <type>Checkbox</type>
</CustomField>