force-app/main/default/objects/Lead/fields/Student_Success_Bolt_Install_Request__c.field-meta.xml
<CustomField>
    <fullName>Student_Success_Bolt_Install_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Student Success Bolt - Install</label>
    <type>Checkbox</type>
</CustomField>