force-app/main/default/objects/Lead/fields/Twitter_Feed_Demo__c.field-meta.xml
<CustomField>
    <fullName>Twitter_Feed_Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Twitter Feed - Demo</label>
    <type>Checkbox</type>
</CustomField>