force-app/main/default/objects/Lead/fields/Website_Inquiry_Description__c.field-meta.xml
<CustomField>
    <fullName>Website_Inquiry_Description__c</fullName>
    <inlineHelpText>Description from website inquiry form.</inlineHelpText>
    <label>Website Inquiry Description</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>