force-app/main/default/objects/Lead/fields/X7Summits_Profile_Learn_More__c.field-meta.xml
<CustomField>
    <fullName>X7Summits_Profile_Learn_More__c</fullName>
    <defaultValue>false</defaultValue>
    <label>7Summits Profile - Learn More</label>
    <type>Checkbox</type>
</CustomField>